Fixed Toastr z-index

--- a/aktivingatlan/src/main/scss/main.scss
+++ b/aktivingatlan/src/main/scss/main.scss
@@ -163,6 +163,7 @@ ul#strength {
 }
 
 .alerts .toast {
+    z-index: 1000;
     position: fixed;
     width: 100%;
 }
